# solitaire

./: .gitignore  CMakeLists.txt  README.md  default.nix
src/: Game.h  SuitPile.cpp  SuitPile.h  UserName.h  card.cpp  card.h  cardStack.cpp  cardStack.h  deck.cpp  deck.h  game.cpp  game.h  leaderBoard.cpp  leaderBoard.h  main.cpp  main.h  stats.cpp  stats.h  suitPile.cpp  suitPile.h
